[package]
name = "bis_rust"
version = "0.1.0"
edition = "2024"
description = "YP-rust learn project - bank information system"
repository = "https://github.com/dubovik02/yp_bis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.27"

[[bin]]
name = "convert"
path = "src/main.rs"

[[bin]]
name = "comparer"
path = "bin/comparer.rs"